; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_headers.c_ngx_http_lua_inject_resp_header_api.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_headers.c_ngx_http_lua_inject_resp_header_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_http_lua_ngx_header_get = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@ngx_http_lua_ngx_header_set = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"__newindex\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"header\00", align 1
@ngx_http_lua_ngx_resp_get_headers = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [12 x i8] c"get_headers\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"resp\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_http_lua_inject_resp_header_api(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @lua_newtable(i32* %3)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @lua_createtable(i32* %5, i32 0, i32 2)
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @ngx_http_lua_ngx_header_get, align 4
  %9 = call i32 @lua_pushcfunction(i32* %7, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_setfield(i32* %10, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @ngx_http_lua_ngx_header_set, align 4
  %14 = call i32 @lua_pushcfunction(i32* %12, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @lua_setfield(i32* %15, i32 -2, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @lua_setmetatable(i32* %17, i32 -2)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @lua_setfield(i32* %19, i32 -2, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @lua_createtable(i32* %21, i32 0, i32 1)
  %23 = load i32*, i32** %2, align 8
  %24 = load i32, i32* @ngx_http_lua_ngx_resp_get_headers, align 4
  %25 = call i32 @lua_pushcfunction(i32* %23, i32 %24)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @lua_setfield(i32* %26, i32 -2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0))
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @lua_setfield(i32* %28, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  ret void
}

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_createtable(i32*, i32, i32) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
